ops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-svc
spec:
  selector:
    app: website
  ports:
    - port: 80
      targetPort: 80
