ops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - automait.ai
    secretName: website-tls
  rules:
    - host: automait.ai
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: website-svc
                port:
                  number: 80
